@@ -40,7 +40,6 @@ tasks {
     }
 
     test {
-        //jvmArgs = listOf("--enable-preview")
         useJUnitPlatform()
         finalizedBy(jacocoTestReport)
     }
@@ -51,6 +50,5 @@ tasks.withType<JavaCompile>().configureEach {
     options.apply {
         encoding = "UTF-8"
         compilerArgs.add("-Xlint:all")
-        //compilerArgs.add("--enable-preview")
     }
 }
